src/VFParser.ts
// Generated from VFParser.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { VFParserListener } from "./VFParserListener";
import { VFParserVisitor } from "./VFParserVisitor";


export class VFParser extends Parser {
	public static readonly COMMENT = 1;
	public static readonly PI_START = 2;
	public static readonly OPEN = 3;
	public static readonly OPEN_SCRIPT = 4;
	public static readonly CDATA_START = 5;
	public static readonly EL_START = 6;
	public static readonly CHARDATA_REF = 7;
	public static readonly WS_NL = 8;
	public static readonly TEXT = 9;
	public static readonly CLOSE_SCRIPT = 10;
	public static readonly CLOSE_OPEN_SCRIPT = 11;
	public static readonly ScriptName = 12;
	public static readonly SCRIPT_ATTRS_START = 13;
	public static readonly SCRIPT_ATTRD_START = 14;
	public static readonly SCRIPT_WS = 15;
	public static readonly END_SCRIPT = 16;
	public static readonly SCRIPT_EL_START = 17;
	public static readonly SCRIPT_CHARDATA_REF = 18;
	public static readonly SCRIPT_WS_NL = 19;
	public static readonly SCRIPT_TEXT = 20;
	public static readonly PI_END = 21;
	public static readonly CLOSE = 22;
	public static readonly SLASH_CLOSE = 23;
	public static readonly SLASH = 24;
	public static readonly EQUALS = 25;
	public static readonly STRING = 26;
	public static readonly ATTRS_START = 27;
	public static readonly ATTRD_START = 28;
	public static readonly WS = 29;
	public static readonly Name = 30;
	public static readonly EL_END = 31;
	public static readonly EL_BODY = 32;
	public static readonly CDATA_END = 33;
	public static readonly CDATA_EL = 34;
	public static readonly CDATA_TEXT = 35;
	public static readonly ATTRS_END = 36;
	public static readonly ATTRS_EL_START = 37;
	public static readonly ATTRS_TEXT = 38;
	public static readonly ATTRD_END = 39;
	public static readonly ATTRD_EL_START = 40;
	public static readonly ATTRD_TEXT = 41;
	public static readonly RULE_vfUnit = 0;
	public static readonly RULE_element = 1;
	public static readonly RULE_attribute = 2;
	public static readonly RULE_attributeName = 3;
	public static readonly RULE_attributeValues = 4;
	public static readonly RULE_content = 5;
	public static readonly RULE_chardata = 6;
	public static readonly RULE_processingInstruction = 7;
	public static readonly RULE_scriptChardata = 8;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"vfUnit", "element", "attribute", "attributeName", "attributeValues", 
		"content", "chardata", "processingInstruction", "scriptChardata",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, "'<'", "'<script'", "'<![CDATA['", undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, "'</script>'", undefined, undefined, undefined, 
		undefined, "'?>'", undefined, undefined, "'/'", "'='", undefined, undefined, 
		undefined, undefined, undefined, "'}'", undefined, "']]>'", undefined, 
		undefined, "'''", undefined, undefined, "'\"'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "COMMENT", "PI_START", "OPEN", "OPEN_SCRIPT", "CDATA_START", 
		"EL_START", "CHARDATA_REF", "WS_NL", "TEXT", "CLOSE_SCRIPT", "CLOSE_OPEN_SCRIPT", 
		"ScriptName", "SCRIPT_ATTRS_START", "SCRIPT_ATTRD_START", "SCRIPT_WS", 
		"END_SCRIPT", "SCRIPT_EL_START", "SCRIPT_CHARDATA_REF", "SCRIPT_WS_NL", 
		"SCRIPT_TEXT", "PI_END", "CLOSE", "SLASH_CLOSE", "SLASH", "EQUALS", "STRING", 
		"ATTRS_START", "ATTRD_START", "WS", "Name", "EL_END", "EL_BODY", "CDATA_END", 
		"CDATA_EL", "CDATA_TEXT", "ATTRS_END", "ATTRS_EL_START", "ATTRS_TEXT", 
		"ATTRD_END", "ATTRD_EL_START", "ATTRD_TEXT",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(VFParser._LITERAL_NAMES, VFParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return VFParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "VFParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return VFParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return VFParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(VFParser._ATN, this);
	}
	// @RuleVersion(0)
	public vfUnit(): VfUnitContext {
		let _localctx: VfUnitContext = new VfUnitContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, VFParser.RULE_vfUnit);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 23;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << VFParser.COMMENT) | (1 << VFParser.PI_START) | (1 << VFParser.WS_NL))) !== 0)) {
				{
				this.state = 21;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case VFParser.COMMENT:
					{
					this.state = 18;
					this.match(VFParser.COMMENT);
					}
					break;
				case VFParser.WS_NL:
					{
					this.state = 19;
					this.match(VFParser.WS_NL);
					}
					break;
				case VFParser.PI_START:
					{
					this.state = 20;
					this.processingInstruction();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 25;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 26;
			this.element();
			this.state = 30;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === VFParser.COMMENT || _la === VFParser.WS_NL) {
				{
				{
				this.state = 27;
				_la = this._input.LA(1);
				if (!(_la === VFParser.COMMENT || _la === VFParser.WS_NL)) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				}
				}
				this.state = 32;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 33;
			this.match(VFParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public element(): ElementContext {
		let _localctx: ElementContext = new ElementContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, VFParser.RULE_element);
		let _la: number;
		try {
			this.state = 78;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 7, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 35;
				this.match(VFParser.OPEN);
				this.state = 36;
				this.match(VFParser.Name);
				this.state = 40;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === VFParser.ScriptName || _la === VFParser.Name) {
					{
					{
					this.state = 37;
					this.attribute();
					}
					}
					this.state = 42;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 43;
				this.match(VFParser.CLOSE);
				this.state = 44;
				this.content();
				this.state = 45;
				this.match(VFParser.OPEN);
				this.state = 46;
				this.match(VFParser.SLASH);
				this.state = 47;
				this.match(VFParser.Name);
				this.state = 48;
				this.match(VFParser.CLOSE);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 50;
				this.match(VFParser.OPEN);
				this.state = 51;
				this.match(VFParser.Name);
				this.state = 55;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === VFParser.ScriptName || _la === VFParser.Name) {
					{
					{
					this.state = 52;
					this.attribute();
					}
					}
					this.state = 57;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 58;
				this.match(VFParser.SLASH_CLOSE);
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 59;
				this.match(VFParser.OPEN_SCRIPT);
				this.state = 63;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === VFParser.ScriptName || _la === VFParser.Name) {
					{
					{
					this.state = 60;
					this.attribute();
					}
					}
					this.state = 65;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 66;
				this.match(VFParser.CLOSE_OPEN_SCRIPT);
				this.state = 67;
				this.scriptChardata();
				this.state = 68;
				this.match(VFParser.END_SCRIPT);
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 70;
				this.match(VFParser.OPEN_SCRIPT);
				this.state = 74;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === VFParser.ScriptName || _la === VFParser.Name) {
					{
					{
					this.state = 71;
					this.attribute();
					}
					}
					this.state = 76;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 77;
				this.match(VFParser.CLOSE_SCRIPT);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public attribute(): AttributeContext {
		let _localctx: AttributeContext = new AttributeContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, VFParser.RULE_attribute);
		let _la: number;
		try {
			this.state = 120;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 12, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 80;
				this.attributeName();
				this.state = 81;
				this.match(VFParser.ATTRD_START);
				this.state = 85;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (((((_la - 37)) & ~0x1F) === 0 && ((1 << (_la - 37)) & ((1 << (VFParser.ATTRS_EL_START - 37)) | (1 << (VFParser.ATTRS_TEXT - 37)) | (1 << (VFParser.ATTRD_EL_START - 37)) | (1 << (VFParser.ATTRD_TEXT - 37)))) !== 0)) {
					{
					{
					this.state = 82;
					this.attributeValues();
					}
					}
					this.state = 87;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 88;
				this.match(VFParser.ATTRD_END);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 90;
				this.attributeName();
				this.state = 91;
				this.match(VFParser.ATTRS_START);
				this.state = 95;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (((((_la - 37)) & ~0x1F) === 0 && ((1 << (_la - 37)) & ((1 << (VFParser.ATTRS_EL_START - 37)) | (1 << (VFParser.ATTRS_TEXT - 37)) | (1 << (VFParser.ATTRD_EL_START - 37)) | (1 << (VFParser.ATTRD_TEXT - 37)))) !== 0)) {
					{
					{
					this.state = 92;
					this.attributeValues();
					}
					}
					this.state = 97;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 98;
				this.match(VFParser.ATTRS_END);
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 100;
				this.attributeName();
				this.state = 101;
				this.match(VFParser.SCRIPT_ATTRD_START);
				this.state = 105;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (((((_la - 37)) & ~0x1F) === 0 && ((1 << (_la - 37)) & ((1 << (VFParser.ATTRS_EL_START - 37)) | (1 << (VFParser.ATTRS_TEXT - 37)) | (1 << (VFParser.ATTRD_EL_START - 37)) | (1 << (VFParser.ATTRD_TEXT - 37)))) !== 0)) {
					{
					{
					this.state = 102;
					this.attributeValues();
					}
					}
					this.state = 107;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 108;
				this.match(VFParser.ATTRD_END);
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 110;
				this.attributeName();
				this.state = 111;
				this.match(VFParser.SCRIPT_ATTRS_START);
				this.state = 115;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (((((_la - 37)) & ~0x1F) === 0 && ((1 << (_la - 37)) & ((1 << (VFParser.ATTRS_EL_START - 37)) | (1 << (VFParser.ATTRS_TEXT - 37)) | (1 << (VFParser.ATTRD_EL_START - 37)) | (1 << (VFParser.ATTRD_TEXT - 37)))) !== 0)) {
					{
					{
					this.state = 112;
					this.attributeValues();
					}
					}
					this.state = 117;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 118;
				this.match(VFParser.ATTRS_END);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public attributeName(): AttributeNameContext {
		let _localctx: AttributeNameContext = new AttributeNameContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, VFParser.RULE_attributeName);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 122;
			_la = this._input.LA(1);
			if (!(_la === VFParser.ScriptName || _la === VFParser.Name)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public attributeValues(): AttributeValuesContext {
		let _localctx: AttributeValuesContext = new AttributeValuesContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, VFParser.RULE_attributeValues);
		let _la: number;
		try {
			this.state = 136;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case VFParser.ATTRD_TEXT:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 124;
				this.match(VFParser.ATTRD_TEXT);
				}
				break;
			case VFParser.ATTRS_TEXT:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 125;
				this.match(VFParser.ATTRS_TEXT);
				}
				break;
			case VFParser.ATTRD_EL_START:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 126;
				this.match(VFParser.ATTRD_EL_START);
				this.state = 128;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === VFParser.EL_BODY) {
					{
					this.state = 127;
					this.match(VFParser.EL_BODY);
					}
				}

				this.state = 130;
				this.match(VFParser.EL_END);
				}
				break;
			case VFParser.ATTRS_EL_START:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 131;
				this.match(VFParser.ATTRS_EL_START);
				this.state = 133;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === VFParser.EL_BODY) {
					{
					this.state = 132;
					this.match(VFParser.EL_BODY);
					}
				}

				this.state = 135;
				this.match(VFParser.EL_END);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public content(): ContentContext {
		let _localctx: ContentContext = new ContentContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, VFParser.RULE_content);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 138;
			this.chardata();
			this.state = 147;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 17, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 142;
					this._errHandler.sync(this);
					switch (this._input.LA(1)) {
					case VFParser.COMMENT:
						{
						this.state = 139;
						this.match(VFParser.COMMENT);
						}
						break;
					case VFParser.PI_START:
						{
						this.state = 140;
						this.processingInstruction();
						}
						break;
					case VFParser.OPEN:
					case VFParser.OPEN_SCRIPT:
						{
						this.state = 141;
						this.element();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					this.state = 144;
					this.chardata();
					}
					}
				}
				this.state = 149;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 17, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public chardata(): ChardataContext {
		let _localctx: ChardataContext = new ChardataContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, VFParser.RULE_chardata);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 173;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << VFParser.CDATA_START) | (1 << VFParser.EL_START) | (1 << VFParser.CHARDATA_REF) | (1 << VFParser.WS_NL) | (1 << VFParser.TEXT))) !== 0)) {
				{
				this.state = 171;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case VFParser.TEXT:
					{
					this.state = 150;
					this.match(VFParser.TEXT);
					}
					break;
				case VFParser.WS_NL:
					{
					this.state = 151;
					this.match(VFParser.WS_NL);
					}
					break;
				case VFParser.CHARDATA_REF:
					{
					this.state = 152;
					this.match(VFParser.CHARDATA_REF);
					}
					break;
				case VFParser.EL_START:
					{
					this.state = 153;
					this.match(VFParser.EL_START);
					this.state = 155;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la === VFParser.EL_BODY) {
						{
						this.state = 154;
						this.match(VFParser.EL_BODY);
						}
					}

					this.state = 157;
					this.match(VFParser.EL_END);
					}
					break;
				case VFParser.CDATA_START:
					{
					this.state = 158;
					this.match(VFParser.CDATA_START);
					this.state = 167;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while (_la === VFParser.CDATA_EL || _la === VFParser.CDATA_TEXT) {
						{
						this.state = 165;
						this._errHandler.sync(this);
						switch (this._input.LA(1)) {
						case VFParser.CDATA_TEXT:
							{
							this.state = 159;
							this.match(VFParser.CDATA_TEXT);
							}
							break;
						case VFParser.CDATA_EL:
							{
							this.state = 160;
							this.match(VFParser.CDATA_EL);
							this.state = 162;
							this._errHandler.sync(this);
							_la = this._input.LA(1);
							if (_la === VFParser.EL_BODY) {
								{
								this.state = 161;
								this.match(VFParser.EL_BODY);
								}
							}

							this.state = 164;
							this.match(VFParser.EL_END);
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						}
						this.state = 169;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					this.state = 170;
					this.match(VFParser.CDATA_END);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 175;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public processingInstruction(): ProcessingInstructionContext {
		let _localctx: ProcessingInstructionContext = new ProcessingInstructionContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, VFParser.RULE_processingInstruction);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 176;
			this.match(VFParser.PI_START);
			this.state = 180;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === VFParser.ScriptName || _la === VFParser.Name) {
				{
				{
				this.state = 177;
				this.attribute();
				}
				}
				this.state = 182;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 183;
			this.match(VFParser.PI_END);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public scriptChardata(): ScriptChardataContext {
		let _localctx: ScriptChardataContext = new ScriptChardataContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, VFParser.RULE_scriptChardata);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 195;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << VFParser.SCRIPT_EL_START) | (1 << VFParser.SCRIPT_CHARDATA_REF) | (1 << VFParser.SCRIPT_WS_NL) | (1 << VFParser.SCRIPT_TEXT))) !== 0)) {
				{
				this.state = 193;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case VFParser.SCRIPT_TEXT:
					{
					this.state = 185;
					this.match(VFParser.SCRIPT_TEXT);
					}
					break;
				case VFParser.SCRIPT_WS_NL:
					{
					this.state = 186;
					this.match(VFParser.SCRIPT_WS_NL);
					}
					break;
				case VFParser.SCRIPT_CHARDATA_REF:
					{
					this.state = 187;
					this.match(VFParser.SCRIPT_CHARDATA_REF);
					}
					break;
				case VFParser.SCRIPT_EL_START:
					{
					this.state = 188;
					this.match(VFParser.SCRIPT_EL_START);
					this.state = 190;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la === VFParser.EL_BODY) {
						{
						this.state = 189;
						this.match(VFParser.EL_BODY);
						}
					}

					this.state = 192;
					this.match(VFParser.EL_END);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 197;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!VFParser.__ATN) {
			VFParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(VFParser._serializedATN));
		}

		return VFParser.__ATN;
	}

}

export class VfUnitContext extends ParserRuleContext {
	public element(): ElementContext {
		return this.getRuleContext(0, ElementContext);
	}
	public EOF(): TerminalNode { return this.getToken(VFParser.EOF, 0); }
	public COMMENT(): TerminalNode[];
	public COMMENT(i: number): TerminalNode;
	public COMMENT(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(VFParser.COMMENT);
		} else {
			return this.getToken(VFParser.COMMENT, i);
		}
	}
	public WS_NL(): TerminalNode[];
	public WS_NL(i: number): TerminalNode;
	public WS_NL(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(VFParser.WS_NL);
		} else {
			return this.getToken(VFParser.WS_NL, i);
		}
	}
	public processingInstruction(): ProcessingInstructionContext[];
	public processingInstruction(i: number): ProcessingInstructionContext;
	public processingInstruction(i?: number): ProcessingInstructionContext | ProcessingInstructionContext[] {
		if (i === undefined) {
			return this.getRuleContexts(ProcessingInstructionContext);
		} else {
			return this.getRuleContext(i, ProcessingInstructionContext);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return VFParser.RULE_vfUnit; }
	// @Override
	public enterRule(listener: VFParserListener): void {
		if (listener.enterVfUnit) {
			listener.enterVfUnit(this);
		}
	}
	// @Override
	public exitRule(listener: VFParserListener): void {
		if (listener.exitVfUnit) {
			listener.exitVfUnit(this);
		}
	}
	// @Override
	public accept<Result>(visitor: VFParserVisitor<Result>): Result {
		if (visitor.visitVfUnit) {
			return visitor.visitVfUnit(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}

